tests/snapshots/snapshots__fixture_ky_level2.snap
---
source: tests/snapshots.rs
expression: output
---
core/Ky.ts
    33→export class Ky {
    34→	static create(input: Input, options: Options): ResponsePromise {
   178→	static #normalizeSearchParams(searchParams: SearchParamsOption): SearchParamsOption {
   200→	constructor(input: Input, options: Options = {}) {
   297→	#calculateDelay(): number {
   316→	async #calculateRetryDelay(error: unknown) {
   390→	#decorateResponse(response: Response): Response {
   398→	#cancelBody(body: ReadableStream | undefined): void {
   407→	#cancelResponseBody(response: Response): void {
   412→	async #retry<T extends (...arguments_: any) => Promise<any>>(function_: T): Promise<ReturnType<T> | Response | void> {
   463→	async #fetch(): Promise<Response> {
   503→	#getNormalizedOptions(): NormalizedOptions {
   512→	#assignRequest(request: Request): void {
   517→	#wrapRequestWithUploadProgress(request: Request, originalBody?: BodyInit): Request {
core/constants.ts
     4→export const supportsRequestStreams = (() => {
    34→export const supportsAbortController = typeof globalThis.AbortController === 'function';
    35→export const supportsAbortSignal = typeof globalThis.AbortSignal === 'function' && typeof globalThis.AbortSignal.any === 'function';
    36→export const supportsResponseStreams = typeof globalThis.ReadableStream === 'function';
    37→export const supportsFormData = typeof globalThis.FormData === 'function';
    39→export const requestMethods = ['get', 'post', 'put', 'patch', 'head', 'delete'] as const;
    41→const validate = <T extends Array<true>>() => undefined as unknown as T;
    46→export const responseTypes = {
    58→export const maxSafeTimeout = 2_147_483_647;
    61→export const usualFormBoundarySize = new TextEncoder().encode('------WebKitFormBoundaryaxpyiPgbbPti10Rw').length;
    63→export const stop = Symbol('stop');
    68→export type ForceRetryOptions = {
   148→export class RetryMarker {
   149→	constructor(public options?: ForceRetryOptions) {}
   235→export const retry = (options?: ForceRetryOptions) => new RetryMarker(options);
   237→export const kyOptionKeys: KyOptionsRegistry = {
   256→export const vendorSpecificOptions = {
   265→export const requestOptionsRegistry = {
errors/ForceRetryError.ts
     8→export class ForceRetryError extends Error {
    14→	constructor(options?: ForceRetryOptions) {
errors/HTTPError.ts
     5→export class HTTPError<T = unknown> extends Error {
    10→	constructor(response: Response, request: Request, options: NormalizedOptions) {
errors/NonError.ts
     6→export class NonError extends Error {
    10→	constructor(value: unknown) {
errors/TimeoutError.ts
     3→export class TimeoutError extends Error {
     6→	constructor(request: Request) {
index.ts
    10→const createInstance = (defaults?: Partial<Options>): KyInstance => {
    34→const ky = createInstance();
types/ResponsePromise.ts
     6→export type ResponsePromise<T = unknown> = {
types/common.ts
     2→export type Primitive = null | undefined | string | number | boolean | symbol | bigint;
     4→export type Required<T, K extends keyof T = keyof T> = T & {[P in K]-?: T[P]};
     6→export type LiteralUnion<LiteralType extends BaseType, BaseType extends Primitive> =
types/hooks.ts
     5→export type BeforeRequestState = {
    14→export type BeforeRequestHook = (
    20→export type BeforeRetryState = {
    30→export type BeforeRetryHook = (options: BeforeRetryState) => Request | Response | typeof stop | void | Promise<Request | Response | typeof stop | void>;
    32→export type AfterResponseState = {
    41→export type AfterResponseHook = (
    48→export type BeforeErrorState = {
    57→export type BeforeErrorHook = (error: HTTPError, state: BeforeErrorState) => HTTPError | Promise<HTTPError>;
    59→export type Hooks = {
types/ky.ts
     5→export type KyInstance = {
types/options.ts
     6→export type SearchParamsInit = string | string[][] | Record<string, string> | URLSearchParams | undefined;
     9→export type SearchParamsOption = SearchParamsInit | Record<string, string | number | boolean | undefined> | Array<Array<string | number | boolean>>;
    11→export type RequestHttpMethod = 'get' | 'post' | 'put' | 'patch' | 'head' | 'delete';
    12→export type HttpMethod = LiteralUnion<RequestHttpMethod | 'options' | 'trace', string>;
    14→export type Input = string | URL | Request;
    16→export type Progress = {
    27→export type KyHeadersInit = NonNullable<RequestInit['headers']> | Record<string, string | undefined>;
    33→export type KyOptions = {
   307→export type KyOptionsRegistry = {[K in keyof KyOptions]-?: true};
   312→export interface Options extends KyOptions, Omit<RequestInit, 'headers'> { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
   358→export type InternalOptions = Required<
   373→export interface NormalizedOptions extends RequestInit { // eslint-disable-line @typescript-eslint/consistent-type-definitions -- This must stay an interface so that it can be extended outside of Ky for use in `ky.create`.
types/request.ts
     1→export type KyRequest<T = unknown> = {
types/response.ts
     1→export type KyResponse<T = unknown> = {
types/retry.ts
     3→export type ShouldRetryState = {
    15→export type RetryOptions = {
utils/body.ts
     5→export const getBodySize = (body?: BodyInit | null): number => {
    57→const withProgress = (stream: ReadableStream<Uint8Array>, totalBytes: number, onProgress: Options['onDownloadProgress'] | Options['onUploadProgress']): ReadableStream<Uint8Array> => {
    90→export const streamResponse = (response: Response, onDownloadProgress: Options['onDownloadProgress']) => {
   119→export const streamRequest = (request: Request, onUploadProgress: Options['onUploadProgress'], originalBody?: BodyInit | null) => {
utils/delay.ts
     5→export type DelayOptions = {
     9→export default async function delay(
utils/is.ts
     2→export const isObject = (value: unknown): value is object => value !== null && typeof value === 'object';
utils/merge.ts
     6→export const validateAndMerge = (...sources: Array<Partial<Options> | undefined>): Partial<Options> => {
    16→export const mergeHeaders = (source1: KyHeadersInit = {}, source2: KyHeadersInit = {}) => {
    32→function newHookValue<K extends keyof Hooks>(original: Hooks, incoming: Hooks, property: K): Required<Hooks>[K] {
    38→export const mergeHooks = (original: Hooks = {}, incoming: Hooks = {}): Required<Hooks> => (
    47→const appendSearchParameters = (target: any, source: any): URLSearchParams => {
    86→export const deepMerge = <T>(...sources: Array<Partial<T> | undefined>): T => {
utils/normalize.ts
     5→export const normalizeRequestMethod = (input: string): string =>
     8→const retryMethods: HttpMethod[] = ['get', 'put', 'head', 'delete', 'options', 'trace'];
    10→const retryStatusCodes = [408, 413, 429, 500, 502, 503, 504];
    12→const retryAfterStatusCodes = [413, 429, 503];
    14→type InternalRetryOptions = Required<Omit<RetryOptions, 'shouldRetry'>> & Pick<RetryOptions, 'shouldRetry'>;
    16→const defaultRetryOptions: InternalRetryOptions = {
    28→export const normalizeRetryOptions = (retry: number | RetryOptions = {}): InternalRetryOptions => {
utils/options.ts
     4→export const findUnknownOptions = (
    30→export const hasSearchParameters = (search: SearchParamsOption): boolean => {
utils/timeout.ts
     3→export type TimeoutOptions = {
     9→export default async function timeout(
utils/type-guards.ts
    27→export function isKyError(error: unknown): error is HTTPError | TimeoutError | ForceRetryError {
    49→export function isHTTPError<T = unknown>(error: unknown): error is HTTPError<T> {
    71→export function isTimeoutError(error: unknown): error is TimeoutError {
    98→export function isForceRetryError(error: unknown): error is ForceRetryError {
utils/types.ts
     1→export type Mutable<T> = {
     5→export type ObjectEntries<T> = T extends ArrayLike<infer U>
